Fix letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -411,7 +411,7 @@ h3 {
         text-transform: uppercase;
         font-size: 2rem;
         letter-spacing: 10px;
-        margin-left: 10px;
+        margin-left: 7px;
     }
     #about {
         background-color: #0F1624;
